[package]
name = "llm_usages"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tabled = "0.17"
anyhow = "1"
dirs = "5"
walkdir = "2"
