[package]
name = "llm_usages"
version = "1.2.1"
edition = "2024"
description = "A CLI tool to track and visualize LLM token usage from Claude Code across projects"
license = "MIT"
repository = "https://github.com/Akasan/llm_usages"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tabled = { version = "0.17", features = ["ansi"] }
anyhow = "1"
dirs = "5"
walkdir = "2"
ratatui = "0.29"
crossterm = "0.28"
